# shapeshift-baseball

./: .gitignore  README.md  package.json  pyproject.toml  vercel.json
artifacts/reports/: evaluation_interventions.parquet  evaluation_matches.parquet
config/: default.yaml
docs/: coach_card.md  front_office_memo.md  locked_decision_memo.md  research_protocol.md
src/shapeshift/: __init__.py  cli.py  config.py
src/shapeshift/data/: __init__.py  features.py  ingest.py  outcomes.py  schema.py  store.py
src/shapeshift/evaluation/: __init__.py  locked.py
src/shapeshift/interventions/: __init__.py  candidates.py  detect.py  episodes.py  event_study.py
src/shapeshift/models/: __init__.py  shape_value.py  temporal.py  train.py
tests/: test_event_study.py  test_features.py  test_ingest.py  test_interventions.py  test_models.py  test_outcomes.py  test_temporal.py
web/: package-lock.json
web/public/: locked_evaluation.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/data/: locked.ts
